# esp32-wifi-extender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.old  web_server_hello.py
app/: CMakeLists.txt  config.hpp  main.cpp
components/data_storer/data_storer_if/: CMakeLists.txt
components/data_storer/data_storer_nvs_impl/: CMakeLists.txt
components/data_storer/data_storer_nvs_impl/src/: nvs_data_storage_impl.cpp  nvs_data_storage_impl.hpp  nvs_init.cpp
components/nvs/nvs_espidf_impl/: CMakeLists.txt
components/nvs/nvs_espidf_impl/src/: nvs.cpp
components/nvs/nvs_interface/: CMakeLists.txt
components/rgbled/rgbled_if/: CMakeLists.txt
components/rgbled/rgbled_sk68xxminihs/: CMakeLists.txt
components/rgbled/rgbled_sk68xxminihs/src/: rgbled_sk68_impl.cpp  rgbled_sk68_impl.hpp  sk68xxminihs_factory.cpp
components/wifi_extender/wifi_extender_espidf_impl/: CMakeLists.txt
components/wifi_extender/wifi_extender_espidf_impl/src/: wifi_ap.cpp  wifi_ap.hpp  wifi_extender_factory_impl.cpp  wifi_extender_impl.cpp  wifi_extender_impl.hpp  wifi_manager.cpp  wifi_manager.hpp  wifi_manager_context.cpp  wifi_manager_context.hpp  wifi_scanner.hpp  wifi_sta.cpp  wifi_sta.hpp
components/wifi_extender/wifi_extender_if/: CMakeLists.txt
components/wifi_extender/wifi_extender_if/src/: wifi_extender_config.cpp
core/client/: CMakeLists.txt  main.cpp
hw/implementations/esp32_nvs_flash/: CMakeLists.txt
hw/implementations/esp32_wifi_access_point/: CMakeLists.txt
hw/implementations/esp32_wifi_access_point/src/: wifi_access_point_factory.cpp  wifi_access_point_impl.cpp  wifi_access_point_impl.hpp
hw/nvs/: CMakeLists.txt
hw/nvs/include/nvs/: nvs.hpp
hw/nvs/platform/esp32_nvs_flash/: CMakeLists.txt
hw/rgbled/platform/sk68xxminihs/: CMakeLists.txt
hw/wifi_access_point/: CMakeLists.txt
hw/wifi_access_point/include/wifi_access_point/: wifi_access_point.hpp  wifi_access_point_factory.hpp
hw/wifi_extender/platform/esp32_wifi_extender/: CMakeLists.txt
hw/wifi_extender/platform/esp32_wifi_extender/src/: wifi_ap.cpp  wifi_ap.hpp  wifi_extender_factory_impl.cpp  wifi_extender_impl.cpp  wifi_extender_impl.hpp  wifi_manager.cpp  wifi_manager.hpp  wifi_manager_context.cpp  wifi_manager_context.hpp  wifi_scanner.cpp  wifi_scanner.hpp  wifi_sta.cpp  wifi_sta.hpp
libs/: CMakeLists.txt
libs/include/ApActiveClients/: ApActiveClients.hpp
libs/src/ApActiveClients/: ApActiveClients.cpp
main/: CMakeLists.txt  config.hpp  main.cpp
os/implementations/freertos_espidf/: CMakeLists.txt
os/implementations/freertos_espidf/src/: os_thread.cpp
os/os_interface/: CMakeLists.txt
os/os_interface/include/: thread.hpp
platform/esp32/: CMakeLists.txt
platform/esp32/esp32_wifi_access_point/: CMakeLists.txt
utils/: CMakeLists.txt
utils/include/utils/: MutexLockGuard.hpp
utils/src/: MutexLockGuard.cpp
(+23 files in other folders)
